2009-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin): Limit range of set ?margin at screen <foo>
	to 0 < foo < 1.

2009-12-01  Ethan A Merritt  <merritt@u.washington.edu>

	* config/makefile.cyg config/makefile.dj2 config/makefile.mgw
	config/makefile.os2 src/Makefile.am term/lua.trm term/Makefile.am.in:
	Install the script gnuplot-tikz.lua under $pkgdatadir rather than under
	$pkglibexecdir.
	Fixes build problems under cygwin and mingw.
	Thanks to Tatsuro Matsuoka.

	* docs/gnuplot.doc:  Provide an example of using 'set palette defined'
	to approximate default MATLAB coloring.
	Thanks to Mike <mws115@usa.com>

2009-11-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Remove unused global df_binary.

2009-11-16  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c (do_string_and_free) src/misc.c (load_file): Fix memory
	issues of patch 2009-10-30 (SF Patch #2898455 and Bug #2895620).

2009-11-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Fix support web page URL.

	* src/show.c (show_version): Less info help lines.

2009-11-14  Philipp K. Janert <janert@ieee.org>

	* src/command.c (undefine_command): Added support for wildcards in
	variable names.

	* docs/gnuplot.doc: Associated documentation.

2009-11-12  Thomas Sefzick <thse@users.sourceforge.net>

	* term/canvas.trm:  Fix initialization failure on non-unix platforms.

2009-11-11 Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updated introduction.

2009-11-06  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert):  Work around a font
	problem in the win32 backend for pango/cairo character rendering.
	Conditional on WIN32 and libpango > 1.21, request rendering by freetype
	rather than win32. Fix suggested by cairo developer Behdad Esfahbod.

2009-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (enhanced_recursion): Replace in-line warnings sent to